@@ -1,6 +1,7 @@
 Revision history for Readline
 
 {{$NEXT}}
+    - Fix for Darwin, refactor code, update documentation to reflect reality
 
 0.1.3  2018-07-11T19:14:48-06:00
     - Track OpenBSD ereadline version
